API仕様書の変更とMyWallet → Walletに定義を変更
